[package]
name = "magixui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Autodiscover

[[bin]]
name = "magix-hide"
test = false
bench = false

[dependencies]
log = "0.4"
lexopt = "0.3.0"
anyhow = "1.0"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Environment",
    "Win32_UI_Shell",
]